[Menu] Fix the inconsistent icon-text spacing in labeled icon menu dropdown

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -1212,7 +1212,7 @@ Floated Menu / Item
 }
 
 /* Icon */
-.ui.labeled.icon.menu .item > .icon:not(.dropdown) {
+.ui.labeled.icon.menu > .item > .icon:not(.dropdown) {
   height: 1em;
   display: block;
   font-size: @labeledIconSize !important;
